--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -85,46 +85,44 @@
 <section class="pricing">
     <h2>Cennik</h2>
 
-    <div class="pricing-grid">
+    <div class="pricing-row">
 
-        <div class="price-card">
-            <div class="price-header">
-                <h3>Start</h3>
-                <div class="price">299 zł</div>
-            </div>
+        <div class="price-box">
+            <h3>Start</h3>
+            <div class="price">299 zł</div>
             <ul>
-                <li>✔ 2 treningi personalne</li>
-                <li>✔ Plan treningowy</li>
-                <li>✔ Analiza składu ciała</li>
+                <li>✓ 2 treningi personalne</li>
+                <li>✓ Plan treningowy</li>
+                <li>✓ Analiza składu ciała</li>
             </ul>
             <a href="#kontakt" class="price-btn">Wybieram pakiet</a>
         </div>
 
-        <div class="price-card featured">
+        <div class="divider"></div>
+
+        <div class="price-box featured">
             <div class="badge">NAJPOPULARNIEJSZY</div>
-            <div class="price-header">
-                <h3>Premium</h3>
-                <div class="price">799 zł</div>
-            </div>
+            <h3>Premium</h3>
+            <div class="price">799 zł</div>
             <ul>
-                <li>✔ 8 treningów personalnych</li>
-                <li>✔ Plan treningowy + dieta</li>
-                <li>✔ Stały kontakt online</li>
-                <li>✔ Monitoring postępów</li>
+                <li>✓ 8 treningów personalnych</li>
+                <li>✓ Plan + dieta</li>
+                <li>✓ Stały kontakt online</li>
+                <li>✓ Monitoring postępów</li>
             </ul>
             <a href="#kontakt" class="price-btn">Zaczynam teraz</a>
         </div>
 
-        <div class="price-card">
-            <div class="price-header">
-                <h3>VIP</h3>
-                <div class="price">1499 zł</div>
-            </div>
+        <div class="divider"></div>
+
+        <div class="price-box">
+            <h3>VIP</h3>
+            <div class="price">1499 zł</div>
             <ul>
-                <li>✔ 16 treningów</li>
-                <li>✔ Indywidualny plan żywieniowy</li>
-                <li>✔ Monitoring + raporty</li>
-                <li>✔ Priorytetowy kontakt</li>
+                <li>✓ 16 treningów</li>
+                <li>✓ Indywidualny plan żywieniowy</li>
+                <li>✓ Monitoring + raporty</li>
+                <li>✓ Priorytetowy kontakt</li>
             </ul>
             <a href="#kontakt" class="price-btn">Wybieram VIP</a>
         </div>
