--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -32,12 +32,34 @@
 
 <section class="offer">
     <h2>Oferta</h2>
-    <ul>
-        <li>Trening personalny 1:1</li>
-        <li>Plany treningowe online</li>
-        <li>Rozpiska dietetyczna</li>
-        <li>Analiza składu ciała</li>
-    </ul>
+
+    <div class="offer-grid">
+
+        <div class="offer-card">
+            <div class="icon">🏋️</div>
+            <h3>Trening 1:1</h3>
+            <p>Indywidualny plan dopasowany do Twojego celu i możliwości.</p>
+        </div>
+
+        <div class="offer-card">
+            <div class="icon">💻</div>
+            <h3>Plany Online</h3>
+            <p>Rozpiski treningowe i dietetyczne zdalnie, stałe wsparcie.</p>
+        </div>
+
+        <div class="offer-card">
+            <div class="icon">📊</div>
+            <h3>Analiza Postępów</h3>
+            <p>Monitoring efektów i regularna optymalizacja planu.</p>
+        </div>
+
+        <div class="offer-card">
+            <div class="icon">🥗</div>
+            <h3>Dieta</h3>
+            <p>Spersonalizowane plany żywieniowe bez głodówek.</p>
+        </div>
+
+    </div>
 </section>
 
 <section class="transformations">
