--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -31,32 +31,38 @@
 </section>
 
 <section class="offer">
-    <h2>Oferta</h2>
+    <div class="offer-wrapper">
 
-    <div class="offer-grid">
-
-        <div class="offer-card">
-            <div class="icon">🏋️</div>
-            <h3>Trening 1:1</h3>
-            <p>Indywidualny plan dopasowany do Twojego celu i możliwości.</p>
+        <div class="offer-left">
+            <h2>Oferta</h2>
+            <p class="offer-intro">
+                Kompleksowe podejście do transformacji sylwetki.
+                Trening, dieta i stałe wsparcie – wszystko w jednym miejscu.
+            </p>
         </div>
 
-        <div class="offer-card">
-            <div class="icon">💻</div>
-            <h3>Plany Online</h3>
-            <p>Rozpiski treningowe i dietetyczne zdalnie, stałe wsparcie.</p>
-        </div>
+        <div class="offer-right">
 
-        <div class="offer-card">
-            <div class="icon">📊</div>
-            <h3>Analiza Postępów</h3>
-            <p>Monitoring efektów i regularna optymalizacja planu.</p>
-        </div>
+            <div class="offer-box">
+                <h3>Trening 1:1</h3>
+                <p>Indywidualne sesje dopasowane do Twojego celu i poziomu.</p>
+            </div>
 
-        <div class="offer-card">
-            <div class="icon">🥗</div>
-            <h3>Dieta</h3>
-            <p>Spersonalizowane plany żywieniowe bez głodówek.</p>
+            <div class="offer-box">
+                <h3>Plany Online</h3>
+                <p>Stałe wsparcie i rozpiski dopasowane do trybu życia.</p>
+            </div>
+
+            <div class="offer-box">
+                <h3>Monitoring</h3>
+                <p>Analiza postępów i optymalizacja planu co tydzień.</p>
+            </div>
+
+            <div class="offer-box">
+                <h3>Indywidualna Dieta</h3>
+                <p>Realne efekty bez głodówek i restrykcji.</p>
+            </div>
+
         </div>
 
     </div>
