--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -160,8 +160,20 @@
 
 <section id="kontakt" class="contact">
     <h2>Kontakt</h2>
-    <p>Zadzwoń: 123 456 789</p>
-    <p>Email: kontakt@fitpower.pl</p>
+
+    <div class="contact-wrapper">
+        <div class="contact-item">
+            <span class="icon">📞</span>
+            <p>123 456 789</p>
+        </div>
+
+        <div class="contact-item">
+            <span class="icon">✉️</span>
+            <p>kontakt@fitpower.pl</p>
+        </div>
+    </div>
+
+    <a href="#hero" class="contact-btn">Umów bezpłatną konsultację</a>
 </section>
 
 <footer class="site-footer">
