--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -22,6 +22,11 @@
         <h1>Trener Personalny Warszawa</h1>
         <p>Transformacje sylwetki • Redukcja tkanki tłuszczowej • Budowa masy mięśniowej</p>
         <a href="#kontakt" class="btn">Umów bezpłatną konsultację</a>
+    <div class="social-icons">
+    <a href="#" target="_blank" aria-label="WhatsApp">W</a>
+    <a href="#" target="_blank" aria-label="Instagram">I</a>
+    <a href="#" target="_blank" aria-label="Facebook">F</a>
+</div>
     </div>
 </header>
 
