--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -22,10 +22,6 @@
         <h1>Trener Personalny Warszawa</h1>
         <p>Transformacje sylwetki • Redukcja tkanki tłuszczowej • Budowa masy mięśniowej</p>
         <a href="#kontakt" class="btn">Umów bezpłatną konsultację</a>
-    <div class="social-icons">
-    <a href="#" target="_blank" aria-label="WhatsApp">W</a>
-    <a href="#" target="_blank" aria-label="Instagram">I</a>
-    <a href="#" target="_blank" aria-label="Facebook">F</a>
 </div>
     </div>
 </header>
@@ -179,6 +175,26 @@
     </div>
 
     <a href="#hero" class="contact-btn">Umów bezpłatną konsultację</a>
+    
+<div class="social-icons">
+    <a href="#" target="_blank" aria-label="WhatsApp">
+        <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+            <path d="M20 3.5A11 11 0 0 0 3.5 20L2 22l2-1.5A11 11 0 1 0 20 3.5zm-8 16a9 9 0 0 1-4.6-1.3l-.3-.2-2.7.7.7-2.6-.2-.3A9 9 0 1 1 12 19.5zm4.5-6.7c-.2-.1-1.3-.6-1.5-.7s-.3-.1-.4.1-.6.7-.8.8-.2.2-.4.1a7.3 7.3 0 0 1-2.2-1.4 8 8 0 0 1-1.5-1.9c-.2-.3 0-.4.1-.5l.3-.4c.1-.1.1-.2.2-.3s0-.2 0-.3c0-.1-.4-1-.6-1.3s-.3-.3-.4-.3h-.4c-.1 0-.3 0-.5.2a2 2 0 0 0-.6 1.5c0 .9.7 1.8.8 1.9a9.5 9.5 0 0 0 3.5 3.3c1.2.5 1.7.6 2.3.5.4-.1 1.3-.5 1.5-1 .2-.5.2-.9.1-1z"/>
+        </svg>
+    </a>
+
+    <a href="#" target="_blank" aria-label="Instagram">
+        <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+            <path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm5 15a5 5 0 1 1 0-10 5 5 0 0 1 0 10zm6-11.5a1.2 1.2 0 1 1-2.4 0 1.2 1.2 0 0 1 2.4 0z"/>
+        </svg>
+    </a>
+
+    <a href="#" target="_blank" aria-label="Facebook">
+        <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+            <path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.5V12h2.9V9.8c0-2.9 1.7-4.5 4.3-4.5 1.3 0 2.6.2 2.6.2v2.9h-1.5c-1.5 0-2 .9-2 1.9V12h3.4l-.5 2.9h-2.9v7A10 10 0 0 0 22 12z"/>
+        </svg>
+    </a>
+</div>
 </section>
 
 <footer class="site-footer">
