--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -11,8 +11,8 @@
 <meta name="author" content="NaxaBe Digital">
 
 <link rel="stylesheet" href="./style.css">
-<link rel="icon" href="favicon.ico">
-
+<link rel="icon" type="image/png" href="favicon.png">
+    
 </head>
 
 <body>
