--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -11,7 +11,7 @@
 <meta name="author" content="NaxaBe Digital">
 
 <link rel="stylesheet" href="./style.css">
-<link rel="icon" type="image/png" href="favicon.png">
+<link rel="icon" type="image/png" href="/trainer-landing-page/favicon.png">
     
 </head>
 
