--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -12,8 +12,8 @@
 
 <link rel="stylesheet" href="./style.css">
     
-<link rel="icon" type="image/png" href="./favicon.png">
-<link rel="shortcut icon" href="./favicon.png">
+<link rel="icon" type="image/png" href="./favicon-v2.png?v=2">
+<link rel="shortcut icon" href="./favicon-v2.png?v=2">
     
 </head>
 
