--- a/index.html
+++ b/index.html
@@ -244,9 +244,13 @@ h2::after {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 24px;
   margin-bottom: 10px;
   transition: 0.3s ease;
+}
+
+.social-icon svg {
+  width: 26px;
+  height: 26px;
 }
 
 .social-item:hover .social-icon {
@@ -481,17 +485,29 @@ footer {
 <div class="social-links">
 
   <a href="https://www.linkedin.com/in/naxabe-digital-28308a3b4/" target="_blank" class="social-item">
-    <div class="social-icon">🔗</div>
+    <div class="social-icon">
+      <svg viewBox="0 0 24 24" fill="currentColor">
+        <path d="M4.98 3.5C4.98 4.88 3.86 6 2.48 6 1.1 6 0 4.88 0 3.5S1.1 1 2.48 1c1.38 0 2.5 1.12 2.5 2.5zM0 8h5v16H0V8zm7.5 0h4.7v2.2h.07c.65-1.23 2.25-2.53 4.63-2.53 4.95 0 5.87 3.25 5.87 7.47V24h-5v-7.6c0-1.81-.03-4.13-2.52-4.13-2.53 0-2.92 1.98-2.92 4V24h-5V8z"/>
+      </svg>
+    </div>
     LinkedIn
   </a>
 
   <a href="https://github.com/naxabedigital" target="_blank" class="social-item">
-    <div class="social-icon">💻</div>
+    <div class="social-icon">
+      <svg viewBox="0 0 24 24" fill="currentColor">
+        <path d="M12 .5C5.65.5.5 5.65.5 12c0 5.09 3.29 9.4 7.86 10.92.58.1.79-.25.79-.56v-2.17c-3.2.7-3.87-1.54-3.87-1.54-.52-1.33-1.27-1.69-1.27-1.69-1.04-.71.08-.7.08-.7 1.15.08 1.76 1.18 1.76 1.18 1.02 1.74 2.67 1.24 3.32.95.1-.74.4-1.24.73-1.52-2.55-.29-5.23-1.28-5.23-5.7 0-1.26.45-2.3 1.18-3.11-.12-.29-.51-1.45.11-3.02 0 0 .96-.31 3.15 1.18a10.9 10.9 0 0 1 5.74 0c2.19-1.49 3.15-1.18 3.15-1.18.62 1.57.23 2.73.11 3.02.73.81 1.18 1.85 1.18 3.11 0 4.43-2.69 5.4-5.25 5.69.41.35.77 1.03.77 2.07v3.07c0 .31.21.67.8.56A11.51 11.51 0 0 0 23.5 12c0-6.35-5.15-11.5-11.5-11.5z"/>
+      </svg>
+    </div>
     GitHub
   </a>
 
   <a href="#" class="social-item">
-    <div class="social-icon">🧾</div>
+    <div class="social-icon">
+      <svg viewBox="0 0 24 24" fill="currentColor">
+        <path d="M4 4h16v16H4z"/>
+      </svg>
+    </div>
     Oferteo
   </a>
 
