--- a/index.html
+++ b/index.html
@@ -333,7 +333,20 @@ footer {
     margin-bottom: 14px;
   }
 }
-  
+
+.project-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  cursor: pointer;
+}
+
+.project-link:hover {
+  box-shadow: 0 15px 40px rgba(201,162,39,0.15);
+  border-color: #c9a227;
+  transform: translateY(-8px);
+}
+
 </style>
 </head>
 
@@ -454,10 +467,10 @@ footer {
   <h2>Projekty</h2>
   <div class="projects">
 
-    <div class="card">
+    <a href="https://naxabe.digital/trainer-landing-page/" target="_blank" class="card project-link">
       <h3>Projekt #1</h3>
       <p>Nowoczesna strona wizytówka dla firmy usługowej – nacisk na konwersję i SEO.</p>
-    </div>
+    </a>
 
     <div class="card">
       <h3>Projekt #2</h3>
@@ -502,14 +515,16 @@ footer {
     GitHub
   </a>
 
-  <a href="#" class="social-item">
-    <div class="social-icon">
-      <svg viewBox="0 0 24 24" fill="currentColor">
-        <path d="M4 4h16v16H4z"/>
-      </svg>
-    </div>
-    Oferteo
-  </a>
+<div class="social-icon">
+  <svg viewBox="0 0 60 60" fill="currentColor">
+    <text x="50%" y="55%" text-anchor="middle"
+          font-size="22"
+          font-family="Segoe UI, sans-serif"
+          font-weight="700">
+      OF
+    </text>
+  </svg>
+</div>
 
 </div>
 
