--- a/index.html
+++ b/index.html
@@ -347,6 +347,55 @@ footer {
   transform: translateY(-8px);
 }
 
+/* ===== PROJECT TRAINER BACKGROUND ===== */
+
+.project-trainer {
+  background: 
+    linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.75)),
+    url("https://images.unsplash.com/photo-1558611848-73f7eb4001a1?q=80&w=1974&auto=format&fit=crop")
+    center/cover no-repeat;
+
+  min-height: 320px;
+  padding: 0;
+  display: flex;
+  align-items: flex-end;
+  border: 1px solid #1f1f1f;
+  position: relative;
+  transition: 0.35s ease;
+}
+
+.project-overlay {
+  padding: 35px;
+  width: 100%;
+}
+
+.project-trainer:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 20px 50px rgba(201,162,39,0.18);
+  border-color: #c9a227;
+}
+
+.project-cta {
+  display: inline-block;
+  margin-top: 18px;
+  font-size: 13px;
+  letter-spacing: 1px;
+  color: #c9a227;
+  text-transform: uppercase;
+  opacity: 0.85;
+  transition: 0.3s ease;
+}
+
+.project-link:hover .project-cta {
+  opacity: 1;
+  transform: translateX(4px);
+}
+
+.project-overlay h3,
+.project-overlay p {
+  text-shadow: 0 2px 10px rgba(0,0,0,0.6);
+}
+  
 </style>
 </head>
 
@@ -467,10 +516,19 @@ footer {
   <h2>Projekty</h2>
   <div class="projects">
 
-    <a href="https://naxabe.digital/trainer-landing-page/" target="_blank" class="card project-link">
-      <h3>Projekt #1</h3>
-      <p>Nowoczesna strona wizytówka dla firmy usługowej – nacisk na konwersję i SEO.</p>
-    </a>
+<a href="https://naxabe.digital/trainer-landing-page/" target="_blank" class="card project-link project-trainer">
+  
+  <div class="project-overlay">
+    <h3>Strona Internetowa dla Trenera Personalnego</h3>
+    <p>
+      Nowoczesny landing page zaprojektowany pod branżę fitness.
+      Przejrzysta oferta, sekcja usług, prezentacja współpracy oraz
+      struktura przygotowana pod konwersję i SEO.
+    </p>
+    <span class="project-cta">Kliknij</span>
+  </div>
+
+</a>
 
     <div class="card">
       <h3>Projekt #2</h3>
