--- a/index.html
+++ b/index.html
@@ -573,16 +573,19 @@ footer {
     GitHub
   </a>
 
-<div class="social-icon">
-  <svg viewBox="0 0 60 60" fill="currentColor">
-    <text x="50%" y="55%" text-anchor="middle"
-          font-size="22"
-          font-family="Segoe UI, sans-serif"
-          font-weight="700">
-      OF
-    </text>
-  </svg>
-</div>
+<a href="https://www.oferteo.pl/" target="_blank" class="social-item">
+  <div class="social-icon">
+    <svg viewBox="0 0 60 60" fill="currentColor">
+      <text x="50%" y="55%" text-anchor="middle"
+            font-size="18"
+            font-family="Segoe UI, sans-serif"
+            font-weight="700">
+        OF
+      </text>
+    </svg>
+  </div>
+  Oferteo
+</a>
 
 </div>
 
