--- a/beauty-landing-page/index.html
+++ b/beauty-landing-page/index.html
@@ -36,6 +36,26 @@
   </div>
 </section>
 
+<section class="about-section">
+  <div class="about-wrapper">
+    <div class="about-text">
+      <h2>O studiu</h2>
+      <p>
+        Beauty Studio to miejsce stworzone z myślą o kobietach,
+        które cenią subtelność, jakość i indywidualne podejście.
+      </p>
+      <p>
+        Pracujemy na certyfikowanych produktach premium,
+        dbając o komfort oraz naturalny efekt każdego zabiegu.
+      </p>
+    </div>
+
+    <div class="about-image">
+      <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?q=80&w=1200&auto=format&fit=crop" alt="Beauty Studio">
+    </div>
+  </div>
+</section>
+  
 <section class="cta-section">
   <h2>Umów wizytę już dziś</h2>
   <p>Zadbaj o siebie w wyjątkowej atmosferze beauty premium.</p>
