--- a/beauty-landing-page/index.html
+++ b/beauty-landing-page/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beauty Studio – Landing Page</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
+  
 </head>
 
 <body>
@@ -12,6 +14,7 @@
 <section class="hero">
   <h1>Beauty Studio</h1>
   <p>Nowoczesny salon kosmetyczny – piękno zaczyna się od detalu</p>
+  <div class="hero-line"></div>
   <a href="#oferta" class="btn">Zobacz ofertę</a>
 </section>
 
@@ -62,5 +65,16 @@
   <a href="#" class="btn" style="background:white; color:#b76e79;">Rezerwuj wizytę</a>
 </section>
 
+<footer class="footer">
+  <div class="footer-content">
+    © 2026 Beauty Studio
+  </div>
+
+  <div class="footer-made">
+    Made with <span class="heart">♡</span> by 
+    <span class="brand">naxabe.digital</span>
+  </div>
+</footer>
+  
 </body>
 </html>
