--- a/beauty-landing-page/index.html
+++ b/beauty-landing-page/index.html
@@ -66,13 +66,12 @@
 </section>
 
 <footer class="footer">
-  <div class="footer-content">
-    © 2026 Beauty Studio
-  </div>
-
+  © 2026 Beauty Studio
   <div class="footer-made">
     Made with <span class="heart">♡</span> by 
-    <span class="brand">naxabe.digital</span>
+    <a href="https://naxabe.digital" target="_blank" class="brand-link">
+      naxabe.digital
+    </a>
   </div>
 </footer>
   
