--- a/beauty-landing-page/index.html
+++ b/beauty-landing-page/index.html
@@ -69,7 +69,7 @@
   © 2026 Beauty Studio
   <div class="footer-made">
     Made with <span class="heart">♡</span> by 
-    <a href="https://naxabe.digital" target="_blank" class="brand-link">
+    <a href="https://naxabe.digital" target="_blank">
       naxabe.digital
     </a>
   </div>
