--- a/beauty-landing-page/index.html
+++ b/beauty-landing-page/index.html
@@ -58,6 +58,27 @@
     </div>
   </div>
 </section>
+
+<section class="testimonial-section">
+  <div class="testimonial-wrapper">
+
+    <div class="testimonial-image">
+      <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?q=80&w=800&auto=format&fit=crop" alt="Zadowolona klientka">
+    </div>
+
+    <div class="testimonial-content">
+      <div class="testimonial-line"></div>
+      <p class="testimonial-quote">
+        „To miejsce całkowicie odmieniło moją pewność siebie.
+        Profesjonalizm, atmosfera i efekty są na najwyższym poziomie.”
+      </p>
+      <div class="testimonial-author">
+        — Magdalena, 34 lata
+      </div>
+    </div>
+
+  </div>
+</section>
   
 <section class="cta-section">
   <h2>Umów wizytę już dziś</h2>
