--- a/beauty-landing-page/index.html
+++ b/beauty-landing-page/index.html
@@ -60,21 +60,38 @@
 </section>
 
 <section class="testimonial-section">
-  <div class="testimonial-wrapper">
+  <h2>Opinie Klientek</h2>
 
-    <div class="testimonial-image">
-      <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?q=80&w=800&auto=format&fit=crop" alt="Zadowolona klientka">
+  <div class="testimonial-slider">
+
+    <div class="testimonial-card">
+      <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=800&auto=format&fit=crop" alt="">
+      <p>„Najlepszy salon, w jakim byłam. Efekt naturalny i perfekcyjny.”</p>
+      <span>— Karolina, 29 lat</span>
     </div>
 
-    <div class="testimonial-content">
-      <div class="testimonial-line"></div>
-      <p class="testimonial-quote">
-        „To miejsce całkowicie odmieniło moją pewność siebie.
-        Profesjonalizm, atmosfera i efekty są na najwyższym poziomie.”
-      </p>
-      <div class="testimonial-author">
-        — Magdalena, 34 lata
-      </div>
+    <div class="testimonial-card">
+      <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?q=80&w=800&auto=format&fit=crop" alt="">
+      <p>„Czuję się tu zaopiekowana i zawsze wychodzę zachwycona.”</p>
+      <span>— Magdalena, 34 lata</span>
+    </div>
+
+    <div class="testimonial-card">
+      <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=800&auto=format&fit=crop" alt="">
+      <p>„Profesjonalizm i klimat na najwyższym poziomie.”</p>
+      <span>— Anna, 31 lat</span>
+    </div>
+
+    <div class="testimonial-card">
+      <img src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?q=80&w=800&auto=format&fit=crop" alt="">
+      <p>„Makijaż permanentny wykonany perfekcyjnie.”</p>
+      <span>— Natalia, 27 lat</span>
+    </div>
+
+    <div class="testimonial-card">
+      <img src="https://images.unsplash.com/photo-1502685104226-ee32379fefbe?q=80&w=800&auto=format&fit=crop" alt="">
+      <p>„To mój ulubiony rytuał w miesiącu.”</p>
+      <span>— Paulina, 36 lat</span>
     </div>
 
   </div>
