--- a/beauty-landing-page/index.html
+++ b/beauty-landing-page/index.html
@@ -6,12 +6,14 @@
   <title>Beauty Studio – Landing Page</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="favicona-v3.png">
   
 </head>
 
 <body>
 
 <section class="hero">
+  <img src="favicona-v3.png" alt="Beauty Studio Logo" class="hero-logo">
   <h1>Beauty Studio</h1>
   <p>Nowoczesny salon kosmetyczny – piękno zaczyna się od detalu</p>
   <div class="hero-line"></div>
