--- a/index.html
+++ b/index.html
@@ -395,7 +395,30 @@ footer {
 .project-overlay p {
   text-shadow: 0 2px 10px rgba(0,0,0,0.6);
 }
-  
+
+/* ===== PROJECT BEAUTY BACKGROUND ===== */
+
+.project-beauty {
+  background: 
+    linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.75)),
+    url("https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?q=80&w=1974&auto=format&fit=crop")
+    center/cover no-repeat;
+
+  min-height: 320px;
+  padding: 0;
+  display: flex;
+  align-items: flex-end;
+  border: 1px solid #1f1f1f;
+  position: relative;
+  transition: 0.35s ease;
+}
+
+.project-beauty:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 20px 50px rgba(201,162,39,0.18);
+  border-color: #c9a227;
+}
+
 </style>
 </head>
 
@@ -530,10 +553,19 @@ footer {
 
 </a>
 
-    <div class="card">
-      <h3>Projekt #2</h3>
-      <p>Landing page pod kampanię reklamową – struktura zoptymalizowana pod sprzedaż.</p>
-    </div>
+<a href="https://naxabe.digital/beauty-landing-page/" target="_blank" class="card project-link project-beauty">
+  
+  <div class="project-overlay">
+    <h3>Beauty Landing Page – Salon Kosmetyczny</h3>
+    <p>
+      Elegancki, minimalistyczny landing page zaprojektowany pod branżę beauty.
+      Premium estetyka, sekcja usług, opinie klientek oraz struktura
+      zoptymalizowana pod konwersję i budowanie wizerunku marki.
+    </p>
+    <span class="project-cta">Kliknij</span>
+  </div>
+
+</a>
 
     <div class="card">
       <h3>Projekt #3</h3>
