--- a/corporate-legal/index.html
+++ b/corporate-legal/index.html
@@ -87,7 +87,13 @@
 </section>
 
 <footer>
-  © 2026 Kancelaria Prawna Lex Premium
+  <div class="footer-inner">
+    <p>© 2026 Kancelaria Prawna Lex Premium</p>
+    <p class="crafted">
+      Crafted by 
+      <a href="https://naxabe.digital" target="_blank">NaxaBe Digital</a>
+    </p>
+  </div>
 </footer>
 
 </body>
