--- a/corporate-legal/index.html
+++ b/corporate-legal/index.html
@@ -21,12 +21,17 @@
 <section class="about">
   <div class="container">
     <h2>O Kancelarii</h2>
-    <p>
-      Lex Premium to kancelaria prawna oferująca kompleksową obsługę
-      prawną przedsiębiorstw oraz klientów indywidualnych.
-      Zapewniamy pełną poufność, transparentność działań
-      oraz indywidualne podejście do każdej sprawy.
-    </p>
+<p>
+  Kancelaria Lex Premium świadczy wyspecjalizowane usługi prawne
+  dla przedsiębiorstw, zarządów oraz klientów indywidualnych.
+  Naszym priorytetem jest bezpieczeństwo prawne, minimalizacja ryzyka
+  oraz skuteczna reprezentacja interesów klienta.
+</p>
+
+<p>
+  Działamy w oparciu o najwyższe standardy etyki zawodowej,
+  zapewniając poufność, transparentność oraz strategiczne podejście do każdej sprawy.
+</p>
   </div>
 </section>
 
@@ -69,6 +74,31 @@
       <li>✔ Pełna poufność</li>
       <li>✔ Terminowość i skuteczność</li>
     </ul>
+  </div>
+</section>
+
+<section class="team">
+  <div class="container">
+    <h2>Zespół</h2>
+
+    <div class="team-grid">
+
+      <div class="team-card">
+        <h3>radca prawny Anna Kowalska</h3>
+        <p>Specjalizacja: prawo gospodarcze, obsługa spółek kapitałowych.</p>
+      </div>
+
+      <div class="team-card">
+        <h3>adwokat Michał Nowak</h3>
+        <p>Specjalizacja: prawo cywilne, reprezentacja sądowa.</p>
+      </div>
+
+      <div class="team-card">
+        <h3>aplikant radcowski Katarzyna Wiśniewska</h3>
+        <p>Wsparcie procesowe, analiza dokumentacji, research prawny.</p>
+      </div>
+
+    </div>
   </div>
 </section>
 
