--- a/corporate-legal/index.html
+++ b/corporate-legal/index.html
@@ -10,6 +10,16 @@
 </head>
 <body>
 
+<header class="topbar">
+  <div class="topbar-inner">
+    <div class="logo">Lex Premium</div>
+    <div class="top-contact">
+      <span>+48 600 000 000</span>
+      <a href="#kontakt" class="top-btn">Umów konsultację</a>
+    </div>
+  </div>
+</header>
+  
 <header class="hero">
   <div class="hero-overlay">
     <h1>Kancelaria Prawna<br><span>Lex Premium</span></h1>
@@ -74,6 +84,25 @@
       <li>✔ Pełna poufność</li>
       <li>✔ Terminowość i skuteczność</li>
     </ul>
+  </div>
+</section>
+
+  <section class="stats">
+  <div class="container">
+    <div class="stats-grid">
+      <div>
+        <h3>15+</h3>
+        <p>lat doświadczenia</p>
+      </div>
+      <div>
+        <h3>500+</h3>
+        <p>obsłużonych spraw</p>
+      </div>
+      <div>
+        <h3>98%</h3>
+        <p>skuteczności procesowej</p>
+      </div>
+    </div>
   </div>
 </section>
 
