--- a/corporate-legal/index.html
+++ b/corporate-legal/index.html
@@ -113,18 +113,58 @@
     <div class="team-grid">
 
       <div class="team-card">
-        <h3>radca prawny Anna Kowalska</h3>
+        <img src="https://images.unsplash.com/photo-1556157382-97eda2d62296?q=80&w=800&auto=format&fit=crop" alt="">
+        <h3>Radca Prawny Anna Kowalska</h3>
         <p>Specjalizacja: prawo gospodarcze, obsługa spółek kapitałowych.</p>
       </div>
 
       <div class="team-card">
-        <h3>adwokat Michał Nowak</h3>
+        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=800&auto=format&fit=crop" alt="">
+        <h3>Adwokat Michał Nowak</h3>
         <p>Specjalizacja: prawo cywilne, reprezentacja sądowa.</p>
       </div>
 
       <div class="team-card">
-        <h3>aplikant radcowski Katarzyna Wiśniewska</h3>
+        <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?q=80&w=800&auto=format&fit=crop" alt="">
+        <h3>Aplikant Katarzyna Wiśniewska</h3>
         <p>Wsparcie procesowe, analiza dokumentacji, research prawny.</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+  <section class="testimonials">
+  <div class="container">
+    <h2>Opinie klientów</h2>
+
+    <div class="testimonials-grid">
+
+      <div class="testimonial-card">
+        <div class="stars">★★★★★</div>
+        <p>
+          Profesjonalna obsługa i pełne zaangażowanie.
+          Sprawa gospodarcza zakończona sukcesem.
+        </p>
+        <span>— Prezes spółki IT, Warszawa</span>
+      </div>
+
+      <div class="testimonial-card">
+        <div class="stars">★★★★★</div>
+        <p>
+          Skuteczna reprezentacja w sporze cywilnym.
+          Pełna transparentność i doskonały kontakt.
+        </p>
+        <span>— Klient indywidualny</span>
+      </div>
+
+      <div class="testimonial-card">
+        <div class="stars">★★★★★</div>
+        <p>
+          Stała obsługa prawna naszej firmy
+          pozwoliła nam uniknąć poważnych ryzyk biznesowych.
+        </p>
+        <span>— CFO spółki produkcyjnej</span>
       </div>
 
     </div>
@@ -134,14 +174,25 @@
 <section id="kontakt" class="contact">
   <div class="container">
     <h2>Kontakt</h2>
-    <p>Skontaktuj się z nami w celu umówienia konsultacji.</p>
 
-    <form>
-      <input type="text" placeholder="Imię i nazwisko" required>
-      <input type="email" placeholder="Adres e-mail" required>
-      <textarea placeholder="Opisz swoją sprawę"></textarea>
-      <button type="submit">Wyślij wiadomość</button>
-    </form>
+    <div class="contact-wrapper">
+
+      <div class="contact-details">
+        <p><strong>Lex Premium</strong></p>
+        <p>ul. Przykładowa 10</p>
+        <p>00-001 Warszawa</p>
+        <p>+48 600 000 000</p>
+        <p>kontakt@lexpremium.pl</p>
+      </div>
+
+      <form>
+        <input type="text" placeholder="Imię i nazwisko" required>
+        <input type="email" placeholder="Adres e-mail" required>
+        <textarea placeholder="Opisz swoją sprawę"></textarea>
+        <button type="submit">Wyślij wiadomość</button>
+      </form>
+
+    </div>
   </div>
 </section>
 
