--- a/corporate-legal/index.html
+++ b/corporate-legal/index.html
@@ -23,7 +23,7 @@
 <header class="hero">
   <div class="hero-overlay">
     <h1>Kancelaria Prawna<br><span>Lex Premium</span></h1>
-    <p>Prawo gospodarcze • Prawo cywilne • Obsługa firm</p>
+    <p>Skuteczna reprezentacja prawna dla firm i klientów indywidualnych</p>
     <a href="#kontakt" class="btn">Umów konsultację</a>
   </div>
 </header>
