--- a/corporate-legal/index.html
+++ b/corporate-legal/index.html
@@ -7,6 +7,9 @@
   <meta name="description" content="Kancelaria Prawna Lex Premium – profesjonalna obsługa prawna firm i klientów indywidualnych. Prawo gospodarcze, cywilne i reprezentacja sądowa.">
 
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="favicon-v4.png">
+  <link rel="shortcut icon" href="favicon-v4.png">
+  
 </head>
 <body>
 
