--- a/index.html
+++ b/index.html
@@ -419,6 +419,29 @@ footer {
   border-color: #c9a227;
 }
 
+/* ===== PROJECT LEGAL BACKGROUND ===== */
+
+.project-legal {
+  background: 
+    linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.8)),
+    url("https://images.unsplash.com/photo-1589829545856-d10d557cf95f?q=80&w=1974&auto=format&fit=crop")
+    center/cover no-repeat;
+
+  min-height: 320px;
+  padding: 0;
+  display: flex;
+  align-items: flex-end;
+  border: 1px solid #1f1f1f;
+  position: relative;
+  transition: 0.35s ease;
+}
+
+.project-legal:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 20px 50px rgba(201,162,39,0.18);
+  border-color: #c9a227;
+}
+
 </style>
 </head>
 
@@ -540,7 +563,6 @@ footer {
   <div class="projects">
 
 <a href="https://naxabe.digital/trainer-landing-page/" target="_blank" class="card project-link project-trainer">
-  
   <div class="project-overlay">
     <h3>Strona Internetowa dla Trenera Personalnego</h3>
     <p>
@@ -550,11 +572,9 @@ footer {
     </p>
     <span class="project-cta">Kliknij</span>
   </div>
-
 </a>
 
 <a href="https://naxabe.digital/beauty-landing-page/" target="_blank" class="card project-link project-beauty">
-  
   <div class="project-overlay">
     <h3>Beauty Landing Page – Salon Kosmetyczny</h3>
     <p>
@@ -564,14 +584,20 @@ footer {
     </p>
     <span class="project-cta">Kliknij</span>
   </div>
-
 </a>
 
-    <div class="card">
-      <h3>Projekt #3</h3>
-      <p>Projekt koncepcyjny z wykorzystaniem AI i automatyzacji procesów marketingowych.</p>
-    </div>
-
+<a href="https://naxabe.digital/corporate-legal/" target="_blank" class="card project-link project-legal">
+  <div class="project-overlay">
+    <h3>Corporate Legal – Landing Page Kancelarii</h3>
+    <p>
+      Profesjonalna strona internetowa dla kancelarii prawnej.
+      Stonowany, korporacyjny design, struktura budująca zaufanie
+      oraz układ zoptymalizowany pod wizerunek i konwersję.
+    </p>
+    <span class="project-cta">Kliknij</span>
+  </div>
+</a>
+    
   </div>
 </section>
   
